src/less/notifications.less
@notification-height:					56px;
@notification-button-verticalmargin:	6px;


.notification {
	width: 100%;
	padding: 0 15px;
	height: 0;
	position: fixed;
	z-index: 18;
	left: 0;
	right: 0;
    -webkit-transition: height 0.3s linear;
    transition: height 0.3s linear;
	background-color: rgba(0, 0, 0, 0.75);

	&.show {
		visibility: visible;
		height: @notification-height;
		line-height: @notification-height;
	}

	&.pull-bottom {
		bottom: 0;
	}

	& i, & p, & .btn {
		background-color: transparent;
		color: #fff;
		display: inline-block;
	}

	& p {
		line-height: @notification-height;
	}

	& i {
		font-size: 18px;
		margin-right: 12px;
		margin-bottom: 0;
		vertical-align: middle;
	}

	& i, & .btn {
		opacity: 0;
	}

	&.showing {
		& i, & .btn {
			opacity: 1;
			-webkit-transition: opacity 350ms;
			        transition: opacity 350ms;
		}
	}

	& .btn {
		padding: 8px 12px;
		margin: @notification-button-verticalmargin 0;
		height: @notification-height - (@notification-button-verticalmargin*2);
	}
}

